# raster

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  input.json  input_manifest.json  justfile  random_bit_flip.sh  rust-toolchain.toml
.cursor/: README.md
.cursor/rules/: core-workflow.mdc  rust-workspace-conventions.mdc
.cursor/skills/output-review/: SKILL.md
.cursor/skills/output-work/: SKILL.md
crates/raster/: Cargo.toml
crates/raster-analysis/: Cargo.toml
crates/raster-analysis/src/: analyzer.rs  lib.rs  metrics.rs  report.rs
crates/raster-backend/: Cargo.toml
crates/raster-backend-native/: Cargo.toml
crates/raster-backend-native/src/: backend.rs  lib.rs
crates/raster-backend-risc0/: Cargo.toml
crates/raster-backend-risc0/src/: guest_builder.rs  lib.rs  risc0.rs
crates/raster-backend/src/: backend.rs  lib.rs  native.rs
crates/raster-cli/: Cargo.toml
crates/raster-cli/src/: chain.rs  commands.rs  main.rs  program.rs  utils.rs
crates/raster-cli/src/commands/: run.rs  tile.rs  utils.rs
crates/raster-cli/src/commands/tile/: list_tile.rs  run_tile.rs
crates/raster-cli/src/commands/utils/: encode.rs  io_validation.rs
crates/raster-cli/src/utils/: authorization.rs  encode.rs
crates/raster-cli/tests/: recur_cli.rs
crates/raster-compiler/: Cargo.toml
crates/raster-compiler/src/: ast.rs  backend.rs  builder.rs  cfs_builder.rs  discovery.rs  flow_resolver.rs  lib.rs  project.rs  schema_gen.rs  sequence.rs  tile.rs
crates/raster-core/: Cargo.toml
crates/raster-core/src/: authorization.rs  cfs.rs  chunking.rs  coordinate_index.rs  draft.rs  error.rs  external.rs  fingerprint.rs  hashing.rs  input.rs  ipc.rs  lib.rs  manifest.rs  program.rs  registry.rs  schema.rs  tile.rs  trace.rs  trace_old.rs  trace_tree.rs  transition.rs
crates/raster-macros/: Cargo.toml
crates/raster-macros/src/: entrypoint.rs  lib.rs  recur.rs
crates/raster-prover/: Cargo.toml  build.rs
crates/raster-prover/guests/authorization/: Cargo.toml
crates/raster-prover/guests/authorization/src/: main.rs
crates/raster-prover/guests/init/: Cargo.toml
crates/raster-prover/guests/init/src/: main.rs
crates/raster-prover/guests/transition/: Cargo.toml
crates/raster-prover/guests/transition/src/: fraud_proof.rs  main.rs  merkle_tree.rs  tests.rs
crates/raster-prover/guests/transition/src/checks/: cfs.rs  drafts.rs  entrypoint.rs  io.rs  mod.rs  store.rs
crates/raster-prover/src/: authorization.rs  bit_packer.rs  error.rs  guest.rs  lib.rs  precomputed.rs  replay.rs  trace.rs  transition.rs  utils.rs
crates/raster-prover/src/guest/: init.rs  mod.rs  replay.rs  transition.rs  types.rs
crates/raster-runtime/: Cargo.toml
crates/raster-runtime/src/: backing.rs  entry_arguments.rs  executor.rs  external_storage.rs  input.rs  internal_storage.rs  lib.rs  profiling.rs  raster_index.rs  storage.rs  tracer.rs  tracing.rs
crates/raster-runtime/src/source/: document.rs  file.rs  mod.rs  resolved.rs
crates/raster-runtime/src/tracing/: assembler.rs  commitment.rs  publisher.rs  recorder.rs  subscriber.rs
crates/raster-runtime/src/tracing/publishers/: binary.rs  json.rs  mod.rs
crates/raster-runtime/src/tracing/subscriber/: audit.rs  commit.rs  json.rs  verify.rs
crates/raster-tracing/: Cargo.toml
crates/raster-tracing/src/: lib.rs  parsing.rs  replayer.rs
crates/raster/src/: exec_helper.rs  input.rs  lib.rs  utils.rs
crates/raster/src/utils/: exec_helper.rs  input.rs
crates/raster/tests/: draft_selection.rs  external_selection.rs  recur_draft.rs  ui.rs
crates/raster/tests/ui/: draft_handle_cannot_clone.rs  draft_handle_cannot_clone.stderr  draft_handle_cannot_reuse_after_move.rs  draft_handle_cannot_reuse_after_move.stderr  non_main_sequence_native_call.rs  non_main_sequence_native_call.stderr  recur_sequence_input_no_value_access.rs  recur_sequence_input_no_value_access.stderr  recur_sequence_rejects_recur_control.rs  recur_sequence_rejects_recur_control.stderr  recur_sequence_rejects_tile_handles.rs  recur_sequence_rejects_tile_handles.stderr  recur_tile_invalid_return.rs  recur_tile_invalid_return.stderr  recur_tile_missing_draft.rs  recur_tile_missing_draft.stderr  recur_tile_wrong_state_placement.rs  recur_tile_wrong_state_placement.stderr
docs/: architecture.md  tile-authoring.md
docs/proposals/: program-chain.md  program-end.md  program-identity.md  program-start.md
docs/specs/: README.md
docs/specs/core/0-conventions/: 00-overview.md  01-ids-and-hashing.md  02-canonical-encoding.md  03-versioning-and-compatibility.md  04-errors-and-diagnostics.md
docs/specs/core/1-define/: 00-overview.md  01-developer-api-surface.md  02-tiles.md  03-sequences.md  04-programs-and-entry-point.md  05-macro-validations.md  (+1 more)
examples/fibonacci-sequence/: Cargo.toml  README.md
examples/fibonacci-sequence/src/: main.rs
examples/hello-tiles/: .gitignore  Cargo.toml  README.md  fraud_commit.bin.fraud-proof  personal_data.rastered  personal_data.rindex  schema.json  seed.rastered  seed.rindex
examples/hello-tiles/src/: input.rs  lib.rs  main.rs
specs/Core/0. Conventions/: 00. Overview.md  01. IDs and Hashing.md  02. Canonical Encoding.md  03. Versioning and Compatibility.md  04. Errors and Diagnostics.md
specs/Core/1. Define/: 00. Overview.md  01. Developer API Surface.md  02. Tiles.md  03. Sequences.md  04. Programs and Entry Point.md  05. Macro Validations.md  06. Authoring-to-IR Mapping.md
specs/Core/2. Compile/: 01. Compilation Pipeline.md  02. Control Flow Schema (CFS) Format.md  05. Program Bundle and Manifests.md
specs/Core/3. Execute/: 00. Overview.md  01. Runner Modes.md  02. Native Execution.md  03. Audit Execution.md  04. zkVM Preview Execution.md  05. Window Replay Execution.md  06. Trace Generation.md  07. Trace Commitment and Fingerprinting.md
specs/Core/4. Verify/: 00. Overview.md  01. Verifier Inputs and Outputs.md  02. What-Must-Run-Next Algorithm.md  03. Divergence Detection.md  04. Fraud Proof Construction.md  05. On-chain Interface Assumptions.md
specs/Project/: PROGRAM_STRUCTURE.md
(+20 files in other folders)
