[workspace]
resolver = "2"
members = [
    "crates/raster",
    "crates/raster-macros",
    "crates/raster-core",
    "crates/raster-compiler",
    "crates/raster-runtime",
    "crates/raster-backend",
    "crates/raster-backend-risc0",
    "crates/raster-analysis",
    "crates/raster-cli",
    "crates/raster-prover",
    "examples/hello-tiles",
    "crates/raster-backend-native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casettek/raster"
authors = ["Raster Contributors"]

[workspace.dependencies]
# Internal crates
raster-core = { path = "crates/raster-core", version = "0.1.0", default-features = false }
raster-macros = { path = "crates/raster-macros", version = "0.1.0" }
raster-runtime = { path = "crates/raster-runtime", version = "0.1.0" }
raster-backend = { path = "crates/raster-backend", version = "0.1.0" }
raster-backend-native = { path = "crates/raster-backend-native", version = "0.1.0" }
raster-backend-risc0 = { path = "crates/raster-backend-risc0", version = "0.1.0" }
raster-compiler = { path = "crates/raster-compiler", version = "0.1.0" }
raster-analysis = { path = "crates/raster-analysis", version = "0.1.0" }
raster-prover = { path = "crates/raster-prover", version = "0.1.0" }
raster-tracing = { path = "crates/raster-tracing", version = "0.1.0" }

# External dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Trace/Fingerprint dependencies
bridgetree = "0.7.0"
hex = "0.4.3"
hex-literal = "1.1.0"
incrementalmerkletree = "0.8.2"
itertools = "0.14.0"
rand = "0.9.2"
sha2 = "0.10.9"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

# Registry and ABI dependencies
linkme = "0.3"
# postcard is no_std compatible, used for serialization in tiles
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
# bincode is used by std-only code (CLI, backend)
bincode = "1.3"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
