[package]
name = "raster-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Analysis and profiling tools for Raster"

[dependencies]
raster-core.workspace = true
raster-runtime.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
