[package]
name = "raster-backend-risc0"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RISC0 zkVM backend for the Raster toolchain"

[features]
default = []
# Enable Metal GPU acceleration for proving (macOS Apple Silicon)
metal = ["risc0-zkvm/metal"]
# Enable CUDA GPU acceleration for proving (NVIDIA GPUs)
cuda = ["risc0-zkvm/cuda"]

[dependencies]
raster-core.workspace = true
raster-backend.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# RISC0 zkVM dependencies
risc0-zkvm = { version = "1.2", default-features = false, features = ["prove", "std"] }
risc0-build = "1.2"

# For guest crate generation
tempfile = "3.14"
cargo_metadata = "0.19"
hex = "0.4"
