[package]
name = "raster-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend abstraction layer for the Raster toolchain"

[dependencies]
raster-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
