[package]
name = "raster-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for the Raster toolchain"

[features]
default = []
# Enable Metal GPU acceleration for proving (macOS Apple Silicon)
metal = ["raster-backend-risc0/metal"]
# Enable CUDA GPU acceleration for proving (NVIDIA GPUs)
cuda = ["raster-backend-risc0/cuda"]

[[bin]]
name = "cargo-raster"
path = "src/main.rs"

[dependencies]
raster-core = { workspace = true, features = ["std"] }
raster-backend.workspace = true
raster-backend-native.workspace = true
raster-backend-risc0.workspace = true
raster-compiler.workspace = true
raster-runtime.workspace = true
raster-analysis.workspace = true
raster-tracing.workspace = true
raster-prover = { workspace = true }

risc0-zkvm = { version = "1.2", features = ["prove", "std"] }

clap.workspace = true
serde_json.workspace = true
postcard.workspace = true
bincode.workspace = true
hex = "0.4"
