[package]
name = "raster-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Build orchestration for the Raster toolchain"

[dependencies]
raster-core = { workspace = true, features = ["std"] }
raster-backend.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
