[package]
name = "raster-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and schemas for the Raster toolchain"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
linkme.workspace = true
bincode.workspace = true
