[package]
name = "raster-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true



[features]
default = []
# Enable risc0-zkvm host utilities for running/proving the transition guest
risc0-host = ["dep:risc0-zkvm"]

[dependencies]
raster-core = { workspace = true, features = ["std"] }
bincode.workspace = true
bridgetree.workspace = true
hex.workspace = true
hex-literal.workspace = true
incrementalmerkletree.workspace = true
itertools.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
postcard.workspace = true

# Optional: RISC0 zkVM for host-side proving (not needed for type definitions)
risc0-zkvm = { version = "1.2", optional = true }
