[package]
name = "raster-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trace replay and verification for the Raster toolchain"

[dependencies]
raster-core.workspace = true
raster-backend.workspace = true
raster-compiler.workspace = true
base64.workspace = true
serde.workspace = true
