[package]
name = "raster-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native execution and tracing for Raster"

[dependencies]
raster-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

