[package]
name = "raster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust-based developer toolchain for tile-based execution"

[features]
default = ["std"]
std = ["raster-core/std", "raster-runtime", "serde", "serde_json"]
alloc = ["raster-core/alloc"]

[dependencies]
raster-core = { workspace = true, default-features = false }
raster-macros.workspace = true

# Runtime is only available with std
raster-runtime = { workspace = true, optional = true }


# Serde and serde_json for input parsing (std only)
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
