[package]
name = "raster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust-based developer toolchain for tile-based execution"

[features]
default = ["std"]
std = ["raster-core/std", "raster-runtime", "serde_json", "sha2"]
alloc = ["raster-core/alloc"]

[dependencies]
raster-core = { workspace = true, default-features = false }
raster-macros.workspace = true

# Runtime is only available with std
raster-runtime = { workspace = true, optional = true }


# Serde is used for typed input bounds in both std and no_std builds
serde.workspace = true
# serde_json for input parsing (std only)
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
