[package]
name = "raster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust-based developer toolchain for tile-based execution"

[features]
default = ["std"]
std = ["raster-core/std", "dep:raster-runtime", "raster-runtime/tracing"]
alloc = ["raster-core/alloc"]
profiling = ["std", "raster-runtime/profiling", "raster-macros/profiling"]

[dependencies]
raster-core = { workspace = true, default-features = false }
raster-macros.workspace = true

# Runtime is only available with std
raster-runtime = { workspace = true, optional = true }


# Serde is used for typed input bounds in both std and no_std builds
serde.workspace = true

[dev-dependencies]
trybuild = "1.0.116"
