[package]
name = "hello-tiles"
version = "0.1.0"
edition = "2021"
default-run = "hello-tiles"

[[bin]]
name = "gen_input"
path = "bin/gen_input.rs"
required-features = ["gen-input"]

[features]
default = ["std"]
std = ["raster/std"]
profiling = ["raster/profiling"]
gen-input = ["dep:serde_json"]

[dependencies]
raster = { path = "../../crates/raster", default-features = false }
serde.workspace = true
serde_json = { workspace = true, optional = true }
