[package]
name = "authorization-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
raster-core = { path = "../../../raster-core", features = ["std"] }

risc0-zkvm = "1.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
