[package]
name = "raster-prover-init-guest"
version = "0.1.0"
edition = "2021"
description = "RISC0 Init guest for raster-prover"
license = "MIT"

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false }
raster-prover = { path = "../..", default-features = false, features = ["guest"] }
raster-core = { path = "../../../raster-core", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[profile.release]
opt-level = 3
lto = true

[workspace]
