[package]
name = "transition-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hex-literal = "1.1.0"

[profile.release]
opt-level = 3
lto = true
